Thu Oct  9 15:18:44 CEST 2003 (tk)
----------------------------------
  * configure.in: added -lresolv to CLAMD_LIBS on Solaris

Wed Oct  8 14:49:40 CEST 2003 (tk)
----------------------------------
  * libclamav: CVS: commited missing files

Wed Oct  8 12:39:26 CEST 2003 (tk)
----------------------------------
  * clamd: (!!!) fixed race condition in database reloading code
  * libclamav: finished support for cvd files

Sun Oct  5 18:30:40 BST 2003 (njh)
----------------------------------
  * clamav-milter: Used to always remove old UNIX domain sockets, now
  		only does that if FixStaleSocket is set
		
Sun Oct  5 14:58:05 BST 2003 (njh)
----------------------------------
  * clamav-milter: s/atoi(cpt->strarg)/cpt->numarg for MaxThreads

Sat Oct  4 20:04:39 CEST 2003 (tk)
----------------------------------
  * clamav.conf: s/RemoveStaleSocket/FixStaleSocket (thanks to Kristof Petr)

Fri Oct  3 12:55:46 BST 2003 (njh)
----------------------------------
  * clamav-milter: added list of recipients who's email is not scanned

Thu Oct  2 19:43:57 CEST 2003 (tk)
----------------------------------
  * clamd: set umask also in Foreground mode (thanks to Kelsey Cummings)

Wed Oct  1 10:52:35 BST 2003 (njh)
----------------------------------
  * libclamav: mbox/message now handles content type definition on a new
  		line

Tue Sep 30 12:54:32 BST 2003 (njh)
----------------------------------
  * clamav-milter: clamfi_envfrom was returning EX_TEMPFAIL in some places
	  rather than SMFIS_TEMPFAIL

Mon Sep 29 18:10:39 BST 2003 (njh)
----------------------------------
  * libclamav: moved stub from heap to stack since its mazimum size is known

Mon Sep 29 13:59:13 BST 2003 (njh)
---------------------------------
  * libclamav:	Handle Content-Type: /; name="eicar.com"

Mon Sep 29 13:42:51 CEST 2003 (tk)
----------------------------------
  * libclamav: initial support for cvd file format (a database container file
	       with support for digital signatures)