@@ -1,3 +1,7 @@
+Sat Oct 11 16:42:42 BST 2003 (njh)
+  * clamav-milter: fixed possible crash with long e-mail addresses
+  		Removed call to clamdscan to get version
+
 Thu Oct  9 15:18:44 CEST 2003 (tk)
 ----------------------------------
   * configure.in: added -lresolv to CLAMD_LIBS on Solaris
